2009-04-16  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Gustavo Noronha.

        https://bugs.webkit.org/show_bug.cgi?id=21546
        [GTK] ATK accessibility enhancements

        Based on a patch by Alp Toker.

        Cover more WebCore role -> ATK role conversions.

        * page/gtk/AccessibilityObjectWrapperAtk.cpp:

2009-04-18  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Gustavo Noronha.

        https://bugs.webkit.org/show_bug.cgi?id=21546
        [GTK] ATK accessibility enhancements

        Do not call ATK setters in the getters, just return the
        value. Among other things calling the setter will emit the notify
        signal, which is wrong.

        * page/gtk/AccessibilityObjectWrapperAtk.cpp:

2009-04-16  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Gustavo Noronha.

        https://bugs.webkit.org/show_bug.cgi?id=21546
        [GTK] ATK accessibility enhancements

        Based on a patch by Alp Toker.

        Implement AtkImage interface.

        * page/gtk/AccessibilityObjectWrapperAtk.cpp:

2009-04-27  Gustavo Noronha Silva  <gns@gnome.org>

        Unreviewed debug build fix.

        * platform/gtk/gtk2drawing.c:
        (moz_gtk_toggle_paint):

2009-04-27  Dimitri Glazkov  <dglazkov@chromium.org>

        Build fix.

        https://bugs.webkit.org/show_bug.cgi?id=25382
        Remove direct reference to CallFrame.h include to pacify Win build.

        * bindings/js/JSDOMBinding.h: Removed ScriptState.h include.
        * bindings/js/ScriptState.h: Replaced CallFrame.h with JSDOMBinding.h

2009-04-27  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Beth Dakin.

        Bug 25374: AX: No AXValue change sent when text is auto-inserted
        https://bugs.webkit.org/show_bug.cgi?id=25374

        When an input's text value is changed through the DOM, no AXValueChange notification is being sent.

        * rendering/RenderTextControl.cpp:
        (WebCore::RenderTextControl::setInnerTextValue):
