@@ -22,6 +22,7 @@
 #include "config.h"
 #include "RenderTextControl.h"
 
+#include "AXObjectCache.h"
 #include "CharacterNames.h"
 #include "Editor.h"
 #include "Event.h"
@@ -174,8 +175,8 @@ void RenderTextControl::setInnerTextValue(const String& innerTextValue)
             if (Frame* frame = document()->frame()) {
                 frame->editor()->clearUndoRedoOperations();
                 
-                VisibleSelection newSelection(frame->selection()->end());
-                frame->editor()->respondToChangedContents(newSelection);
+                if (AXObjectCache::accessibilityEnabled())
+                    document()->axObjectCache()->postNotification(this, "AXValueChanged");
             }
         }
 
