@@ -1,3 +1,15 @@
+2009-04-27  Chris Fleizach  <cfleizach@apple.com>
+
+        Reviewed by Darin Adler.
+
+        Bug 25374: AX: No AXValue change sent when text is auto-inserted
+        https://bugs.webkit.org/show_bug.cgi?id=25374
+
+        First patch caused some regression tests to fail. 
+
+        * rendering/RenderTextControl.cpp:
+        (WebCore::RenderTextControl::setInnerTextValue):
+
 2009-04-16  Xan Lopez  <xlopez@igalia.com>
 
         Reviewed by Gustavo Noronha.
